# ambientpose

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  run-mediapipe.ps1  run-openpose.ps1  run-ultralytics.ps1  run.ps1
cli/: __init__.py  detect.py  person_selection.py
data/toronto-gait-outputs-backup-20250728_114925/02/: gait.json
data/toronto-gait-outputs-backup-20250728_114925/04/: gait.json
data/toronto-gait-outputs-backup-20250728_114925/07/: gait.csv
data/toronto-gait-outputs-backup-20250728_114925/08/: gait.csv  gait.json
data/toronto-gait-outputs-backup-20250728_114925/10/: gait.json
data/toronto-gait-outputs-backup-20250728_114925/14/: gait.json
data/toronto-gait-outputs/01/: gait.csv
data/toronto-gait-outputs/02/: gait.csv  gait.json
data/toronto-gait-outputs/03/: gait.csv  gait.json
data/toronto-gait-outputs/04/: gait.csv  gait.json
data/toronto-gait-outputs/05/: gait.csv  gait.json
data/toronto-gait-outputs/06/: gait.csv  gait.json
data/toronto-gait-outputs/07/: gait.csv  gait.json
data/toronto-gait-outputs/08/: gait.csv  gait.json
data/toronto-gait-outputs/09/: gait.csv  gait.json
data/toronto-gait-outputs/11/: gait.csv  gait.json
data/toronto-gait-outputs/12/: gait.csv  gait.json
data/toronto-gait-outputs/13/: gait.csv  gait.json
data/toronto-gait-outputs/14/: gait.csv  gait.json
data/videos/: video.avi
docker/: Dockerfile  requirements.txt
docs/: ADVANCED_CLI.md  ALPHAPOSE_MAC.md  BACKEND_SPECIFIC.md  BATCH_SCRIPTS.md  CONFIDENCE.md  DESIGN.md  EXISTING_OUTPUTS_UPDATE.md  INSTALL.md  MODEL_DOWNLOAD.md  MOST_CENTRAL_HEURISTIC.md  MOST_CENTRAL_IMPLEMENTATION_SUMMARY.md  OPENPOSE_SETUP.md  OUTPUTS_UPDATE_SUMMARY.md  PERSON_DETECTION.md  PERSON_SELECTION_IMPLEMENTATION.md  README.md  STREAMLIT_FRONTEND.md  UV_SETUP.md
frontend/: README.md  app.py  package-lock.json  package.json  pyproject.toml
frontend/components/: cli_utils.py  summary.py  uploader.py  viewer.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/layout/: Breadcrumbs.tsx  ErrorBoundary.tsx
frontend/src/components/ui/: Toaster.tsx
frontend/tests/components/: test_cli_utils.py  test_uploader.py
outputs/01/: gait.json
outputs/03/: gait.csv
outputs/04/: gait.csv
outputs/09/: gait.csv  gait.json
outputs/10/: gait.csv
outputs/11/: gait.csv  gait.json
outputs/13/: gait.json
outputs/14/: gait.csv
scripts/: apply_longest_track_to_existing_outputs.py  apply_most_central_to_existing_outputs.py  apply_person_selection.py  download_alphapose_model.py  download_models.py  download_yolox_models.py  install_alphapose.py  run-frontend.ps1  run-openpose-batch.ps1  run-openpose-batch.sh  run-openpose.ps1  run-ultralytics.ps1  setup.ps1  setup_alphapose_env.py  verify_outputs_update.py
server/: __init__.py  app.py
tests/: test_advanced_cli.py  test_cli.py  test_person_selection.py  test_streamlit_cli.py  test_toronto_format.py
